- Add a home button to the package details view - Fix the overflowing content in small screens

--- a/static/index.css
+++ b/static/index.css
@@ -47,24 +47,33 @@ body {
   border-bottom: 0.5px solid #84878A;
 }
 
+.home-button {
+  height: 32px;
+}
+
+.home-button:hover {
+  cursor: pointer;
+}
+
 .package {
   width: 80%;
   max-width: 1000px;
   flex-grow: 1;
   margin-bottom: 1px;
-
   background-color: #ffffff;
   border: 0.5px solid #84878A;
-  box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  overflow: hidden;
 }
 
 .package-name {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-size: 24px;
   height: 48px;
-  line-height: 48px;
-  padding: 0px 16px;
+  padding: 4px 16px;
 }
 
 .package-name:hover {
